#100DaysOfSwift Day 23 Project 3 Milestone Projects 1-3 Challenge

--- a/Day23Challenge/Base.lproj/Main.storyboard
+++ b/Day23Challenge/Base.lproj/Main.storyboard
@@ -1,24 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HpX-wj-hHD">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="kmg-0o-pZ9">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="HF4-3U-ahP" customClass="ViewController" customModule="Day23Challenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QfR-Cf-l7p">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="flagCell" rowHeight="149" id="RCl-wo-Ueh" customClass="FlagCell" customModule="Day23Challenge" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="149"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="RCl-wo-Ueh" id="NVT-NH-kVU">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="149"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q3h-tA-csz">
+                                            <rect key="frame" x="107" y="24.5" width="200" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="100" id="gqy-6Z-m4W"/>
+                                                <constraint firstAttribute="width" constant="200" id="oZ2-3d-GSA"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Q3h-tA-csz" firstAttribute="centerX" secondItem="NVT-NH-kVU" secondAttribute="centerX" id="6XL-ds-k9l"/>
+                                        <constraint firstItem="Q3h-tA-csz" firstAttribute="centerY" secondItem="NVT-NH-kVU" secondAttribute="centerY" id="E0o-GF-7Rd"/>
+                                        <constraint firstItem="Q3h-tA-csz" firstAttribute="top" secondItem="NVT-NH-kVU" secondAttribute="topMargin" constant="13.5" id="Y8q-Oe-qpA"/>
+                                        <constraint firstItem="Q3h-tA-csz" firstAttribute="leading" secondItem="NVT-NH-kVU" secondAttribute="leadingMargin" constant="87" id="hlc-OV-hXL"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="flagImageView" destination="Q3h-tA-csz" id="C5D-us-U9H"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="HF4-3U-ahP" id="otf-dY-wpJ"/>
+                            <outlet property="delegate" destination="HF4-3U-ahP" id="WV2-Wv-fTF"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="XgJ-c6-PMS"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vts-n6-5gu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="876.81159420289862" y="142.63392857142856"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="C6e-be-9ig">
+            <objects>
+                <viewController storyboardIdentifier="Detail" id="ku5-HN-cgu" customClass="DetailViewController" customModule="Day23Challenge" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iZI-Wa-tnD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="try-VE-rHi">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="try-VE-rHi" secondAttribute="bottom" id="3WV-0n-pj0"/>
+                            <constraint firstItem="try-VE-rHi" firstAttribute="leading" secondItem="gtu-zJ-Fy9" secondAttribute="leading" id="6Wf-Jg-RnQ"/>
+                            <constraint firstItem="try-VE-rHi" firstAttribute="trailing" secondItem="gtu-zJ-Fy9" secondAttribute="trailing" id="Gcs-5E-8CN"/>
+                            <constraint firstItem="try-VE-rHi" firstAttribute="top" secondItem="iZI-Wa-tnD" secondAttribute="top" id="Wvf-gB-hVL"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="gtu-zJ-Fy9"/>
+                    </view>
+                    <connections>
+                        <outlet property="flagImageView" destination="try-VE-rHi" id="Eys-xw-3Gc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zL0-KT-pJv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1621.7391304347827" y="142.63392857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Mpj-nF-PnL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HpX-wj-hHD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VrU-qo-qIn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="HF4-3U-ahP" kind="relationship" relationship="rootViewController" id="wMd-tw-eiA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dg9-sg-fGb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="79.710144927536234" y="142.63392857142856"/>
         </scene>
     </scenes>
 </document>
